css: fix spacing at bottom of document and top of logo breakdown img

--- a/_static/css/pydata-overrides.css
+++ b/_static/css/pydata-overrides.css
@@ -65,6 +65,10 @@ a.headerlink {
   position: relative;
 }
 
+.custom-spacing {
+  margin-top: 2em; 
+}
+
 select {
   width: 100%;
   padding: 10px;
